* Throttle:       - Correctly check inbound and outbound total bw limits separately       - Fix up and actually use the tunnel.participatingMessageCount stat,         favor it if lower than the total bw stat, so that         client traffic isn't included for throttle decisions       - Reduce min message count from 60 to 40     * Tunnel Dispatcher:       - Add tunnel.participatingBandwidth stat       - Remove all 3h and 24h stats
Monotone-Parent: 31b4a50c1bd28ed374f2bf4f1d8bee78e4c4b481
Monotone-Revision: 7d855e00b8cb3dd0b147cf453560b356b43b296d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-09-18T17:14:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2008-09-18 zzz
+    * Throttle:
+      - Correctly check inbound and outbound total bw limits separately
+      - Fix up and actually use the tunnel.participatingMessageCount stat,
+        favor it if lower than the total bw stat, so that
+        client traffic isn't included for throttle decisions
+      - Reduce min message count from 60 to 40
+    * Tunnel Dispatcher:
+      - Add tunnel.participatingBandwidth stat
+      - Remove all 3h and 24h stats
+
 2008-09-15 zzz
     * FloodOnlySearchJob:
       - Ask non-floodfill peers if we don't know any floodfills
