2008-09-19 zzz     * Tunnels:       - Add missing message accounting for inbound gateways,         we were underestimating participating traffic because of it,         and the tunnels were classified "inactive"       - Add participating tunnel role on tunnels.jsp
Monotone-Parent: 7d855e00b8cb3dd0b147cf453560b356b43b296d
Monotone-Revision: f3f3baa0de95ace23caf03f2a502cc4c1556bb83

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-09-19T01:03:57
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2008-09-19 zzz
+    * Tunnels:
+      - Add missing message accounting for inbound gateways,
+        we were underestimating participating traffic because of it,
+        and the tunnels were classified "inactive"
+      - Add participating tunnel role on tunnels.jsp
+
 2008-09-18 zzz
     * Throttle:
       - Correctly check inbound and outbound total bw limits separately
