* NetDb: Fix the totally broken "check new routers against blocklist"       code from 3 checkins ago     * tunnels.jsp: Sort participating tunnels by usage, display rate
Monotone-Parent: f3f3baa0de95ace23caf03f2a502cc4c1556bb83
Monotone-Revision: ede426fe0db64266394d9ba4d150e85b68ea3442

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-09-20T14:08:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2008-09-20 zzz
+    * NetDb: Fix the totally broken "check new routers against blocklist"
+      code from 3 checkins ago
+    * tunnels.jsp: Sort participating tunnels by usage, display rate
+
 2008-09-19 zzz
     * Tunnels:
       - Add missing message accounting for inbound gateways,
