* config.jsp: Add some reachability help     * configpeer.jsp: Add blocklist info     * help.jsp: Add link to German FAQ     * tunnels.jsp: Fix inactive participating count
Monotone-Parent: be99aafadf9e885f8aee2a4778b629ef26121c0b
Monotone-Revision: 410a99bd6ed091ba12698edfce31d1ee7dcb3291

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-09-23T18:48:59
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-09-23 zzz
+    * config.jsp: Add some reachability help
+    * configpeer.jsp: Add blocklist info
+    * help.jsp: Add link to German FAQ
+    * tunnels.jsp: Fix inactive participating count
+    * SearchReplyJob: Don't look up references to shitlisted peers
+    * TunnelPeerSelector: Avoid a peer for 20s after a reject or timeout
+
 2008-09-20 zzz
     * NetDb: Fix the totally broken "check new routers against blocklist"
       code from 3 checkins ago
