* checklist update     * i2psnark: Add codevoid link, remove mastertracker     * hosts.txt: add echelon, codevoid
Monotone-Parent: 410a99bd6ed091ba12698edfce31d1ee7dcb3291
Monotone-Revision: 702d19f746dabc901ebadec705ce42950c124f55

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-09-29T11:49:09
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2008-09-29 zzz
+    * i2psnark: Add codevoid link, remove mastertracker
+
 2008-09-23 zzz
     * config.jsp: Add some reachability help
     * configpeer.jsp: Add blocklist info
