--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-10-05  0.6.4 released
+
+2008-10-05 Complication
+    * Update versions, package release
+
 2008-09-29 zzz
     * i2psnark: Add codevoid link, remove mastertracker
 
