history.txt additions
Monotone-Parent: 707a02a3c1dc2a8207a47db75b98e10995ed107d
Monotone-Revision: 07188d6eb4d52af5bdde5cbb23dc6facea726ad0

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-07T18:38:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2008-10-07 sponge
+    * Bugfixes and additions to streaming.
+    * Added SimpleStore class in utils.
+    * Fixed SimpleTimer class to allow exit.
+    * BOB (Basic Open Bridge) added.
+
 2008-09-29 zzz
     * i2psnark: Add codevoid link, remove mastertracker
 
