Revision/history changes
Monotone-Parent: 3be8c14657acee55615357c9f4d0464c9632bd00
Monotone-Revision: 560660bb79951c0287fd36656d2368eef07bcffb

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-08T15:39:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-10-08 sponge
+    * Update version to -2
+    * Bugfixes and additions to BOB
+
 2008-10-07 sponge
     * Bugfixes and additions to streaming.
     * Added SimpleStore class in utils.
