Bugfixes for BOB, Important database locking to prevent thread collisions.
Monotone-Parent: 2aa8c46d00a771eafca3c15d6a78fae5ddb64da4
Monotone-Revision: c554c85b9850ebfddad982a13eaadb47d6c24f21

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2008-10-09T11:58:00
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2008-10-09 sponge
+    * Update version to -3
+    * BOB database threadlocking fixes
+
 2008-10-08 sponge
     * Update version to -2
     * Bugfixes and additions to BOB
