* Tunnels: Implement random discard to enforce share limit
Monotone-Parent: ad5aefe855bbc536299ad9b360320902cdbac34f
Monotone-Revision: 49f1fc39da2c0abc571bc1c841cce66fe8501f6a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-10-10T17:34:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,17 @@
+2008-10-10 zzz
+    * Profiles: Reduce reject penalty in
+      capacity calculation to avoid a congestion collapse
+    * Throttle: Change reject to BANDWIDTH from CRIT on shutdown
+      for improved anonymity
+    * Tunnels: Implement random discard to enforce share limit
+    * Tunnel Tests: Add time for outbound delay, to avoid
+      congestion collapse
+    * UDPPacketReader: Adjust logging
+    * build files: Change to source=1.5, target=1.5
+    * configpeer.jsp: Table cleanup
+    * i2psnark: Change default tunnel length from 1+1 to 2+0
+    * peers.jsp: Change <,> to in,out for UDP
+
 2008-10-09 sponge
     * Update version to -3
     * BOB database threadlocking fixes
