--- a/install.txt
+++ b/install.txt
@@ -1,10 +1,9 @@
-$Id$
 I2P source installation instructions
 
 To build and install I2P from source, you must first build
 and package up the appropriate installer by running:
 
-  ant dist
+  ant pkg
 
 This will produce a few key files:
 * i2p.tar.bz2:   the headless installation
@@ -19,8 +18,7 @@ You will need to have ant installed from http://ant.apache.org/
 (1.5 or newer)
 
 Supported JVMs:
-  Windows: Latest available from http://java.sun.com/ (1.3+ supported)
-  Linux:   Latest available from http://java.sun.com/ (1.3+ supported)
-  FreeBSD: /usr/ports/java/linux-sun-jdk1.4
-  various: http://www.kaffe.org/ using CVS HEAD as of Sept 1, 2004
-           (or any subsequent releases) 
+  Windows: Latest available from http://java.sun.com/ (1.5+ supported)
+  Linux:   Latest available from http://java.sun.com/ (1.5+ supported)
+  FreeBSD: Sun 1.5-compatible (NIO required)
+  various: http://www.kaffe.org/ Sun 1.5-compatible (NIO required)
