Add multilanguage support for index.jsp
Monotone-Parent: 5ac386536f7c3dbf7ccc6c2cdd6fb4b7c140cc4b
Monotone-Revision: a416c072412d750a37ff85a393d46ab9415791a0

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-10-14T16:23:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2008-10-14 zzz
+    * index.jsp: Add multilanguage support for readme.html;
+      add readme_de.html (thanks devzero!)
+    * configupdate.jsp, configadvanced.jsp:
+      Disable word wrap in textareas
+    * install*.txt: Update for 1.5
+    * summary.jsp: Remove failing peer count
+
 2008-10-10 zzz
     * Profiles: Reduce reject penalty in
       capacity calculation to avoid a congestion collapse
