oops remove extra stuff in IndexBean
Monotone-Parent: e1a14826c019ee3d1e316e4a7b417faf2314fead
Monotone-Revision: 7dfdeaccace53139000df1527066805a40addb01

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-11T13:02:45

--- a/history.txt
+++ b/history.txt
@@ -9,6 +9,8 @@
         so they won't be rejected
       - Reduce flusher delay to 250ms (was 500)
       - Flush unless window is full (was window is non-empty)
+    * Streaming: Enforce a minimum MTU of 512
+    * I2PTunnel: Change "interactive" max window size to 16 (was 1)
     * NetDb: Fix a deadlock caused by last checkin
 
 2008-11-09 zzz
