--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2008-11-15 zzz
+    * Build files:
+      - Don't die if depend not available
+      - Only verify Jetty hash once
+      - Add streaming lib tests to depend task
+    * I2CP Compression:
+      - Add i2cp.gzip option (default true)
+      - Add compression stats
+      - Don't bother compressing if really small
+
 2008-11-13 zzz
     * Streaming:
       - Add more info to Connection.toString() for debugging
