--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,17 @@
+2008-11-20 zzz
+    * I2PTunnel: Handle missing fields in edit pages better
+    * Move DummyNetworkDatabaseFacade to his own file
+      to help the build dependencies
+    * Drop old tcp transport and old tunnel build sources
+    * EepGet:
+      - Better handling of 504 gateway timeout
+        (keep going up to limit of retry count rather
+         than just one more partial fetch)
+      - Add -t cmd line option for timeout
+      - Better handling of 403, 409, 503 errors
+      - Don't keep going after unknown return code
+      - Don't delay before exiting after a failure
+
 2008-11-15 zzz
     * Build files:
       - Don't die if depend not available
