--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2008-11-21 zzz
+    * Cache DNS and negative DNS for 5m (was 1m and forever)
+    * Delay shitlist cleaner at startup
+    * Strip wrapper properties from client config
+    * Define multiple cert type
+    * Prohibit negative maxSends in streaming
+    * HTML fixup on configtunnels.jsp
+    * Increase wrapper exit timeout from default 15s to 30s
+
 2008-11-20 zzz
     * I2PTunnel: Handle missing fields in edit pages better
     * Move DummyNetworkDatabaseFacade to his own file
