fix windows url launcher
Monotone-Parent: b6344c3ba0482e63e3e87f93533f6ea533478cc8
Monotone-Revision: e783fd9d24df7debf8cd42332c74900b48711c4f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-26T18:32:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2008-11-26 zzz
+    * Fix Windows UrlLauncher
+
 2008-11-21 zzz
     * Cache DNS and negative DNS for 5m (was 1m and forever)
     * Delay shitlist cleaner at startup
