--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-12-01  0.6.5 released
+
+2008-12-01 Complication
+    * Update versions, package release, fix typo in comment
+
 2008-11-26 zzz
     * Fix Windows UrlLauncher
 
