--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-01-17 zzz
+    * NTCP: Prevent two NTCP Pumpers
+
 2009-01-14 zzz
     * config.jsp: Fix burst seconds display
     * HTTPClient: Fix per-tunnel settings for i2cp.gzip and
