--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2008-01-24  0.7 released
+
+2009-01-24 Complication
+    * Update versions, package release
+
 2009-01-17 zzz
     * NTCP: Prevent two NTCP Pumpers
 
