Discarded int fix.
Monotone-Parent: f8b10c88e9c5f01dd05bad91c3248cc54f458dd9
Monotone-Revision: d6901f35bd88f633d566f597f0c10904a853a37d

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-01-31T05:18:12
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-01-31 sponge
+    * One line BOB discarded interger fix 
+      (not that it mattered at this point)
+
 2009-01-25 zzz
     * Build files:
       - Don't bundle unneeded XML parser xercesImpl.jar (1MB)
