Final Slackbuild cleanups, ant slackpkg target added.
Monotone-Parent: a4ebe876e3c0fe0262b223d88bc2d6d5afbc0d1c
Monotone-Revision: a887071ae8eb88840f21719846a28eea3287f900

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-02-02T01:22:31
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-02-02 sponge
+    * Final? cleanups to Slackbuilds.
+    * ant target for Slackbuilds.
+
 2009-02-01 sponge
     * Slackbuild files... if we can have them for Debian, why not :-)
 
