BOB version bump. Router Build bump.
Monotone-Parent: 9d1aeec0c648a8db8751f78afcbaf965e879e569
Monotone-Revision: 78d8ece1514216315644bbef224c62e1e9fbe370

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-02-22T07:26:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-02-22 sponge
+    * BOB: Orphan tunnel issue fix, bump BOB version
+    * bump to Build 6
+
 2009-02-16 zzz
     * Streaming lib: Plug timer leak, don't send keepalives
       after close, don't disconnect hard after close
