-11, catch rare AIOOB
Monotone-Parent: e16539af94b20c3931fe80fdfd6eb1dc60b28624
Monotone-Revision: 19a0ff7d4cf38e2f28befb2fc7437f2a41470b44

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-03-27T18:09:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-03-27 zzz
+    * Add readme_fr.html
+    * License splash update
+    * Catch rare TunnelGatewayMessage AIOOB, root cause unknown
+
 2009-03-24 zzz
     * I2PTunnel:
       - Add some warnings about new features
