* Update versions, package release
Monotone-Parent: 19a0ff7d4cf38e2f28befb2fc7437f2a41470b44
Monotone-Revision: 7bae8d314209ec279a4da918dc3255e31bda7e45

Monotone-Author: complication@mail.i2p
Monotone-Date: 2009-03-29T19:47:46
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.7.1

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-03-29  0.7.1 released
+
+2009-03-29 Complication
+    * Update versions, package release
+
 2009-03-27 zzz
     * Add readme_fr.html
     * License splash update
