I2PTunnel: Fix tunnel close http://forum.i2p/viewtopic.php?t=3231 broken in 0.7-8
Monotone-Parent: cc57aca56268a19ceb82acc00a4893e9a7729e26
Monotone-Revision: fc678c3fcf2b704921a3b8f4d8c35b5d68397f3b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-04-01T04:54:49
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-04-01 zzz
+    * I2PTunnel: Fix tunnel close
+      http://forum.i2p/viewtopic.php?t=3231
+
 2009-03-30 zzz
     * I2CP:
       - Implement BandwidthLimitsMessage
