--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,5 @@
+2009-04-03 sponge
+    * Fix broken dependencies for BOB.jar
 2009-04-02 zzz
     * Profiles:
       - Remove unused calculators and RateStats:
