--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,6 @@
 2009-04-03 sponge
     * Fix broken dependencies for BOB.jar
+    * Router build version incremented to 5.
 2009-04-02 zzz
     * Profiles:
       - Remove unused calculators and RateStats:
