Forgot the history.txt entry, oops!!
Monotone-Parent: 35acb6ca244c7f75f023f526b80540e80353c38b
Monotone-Revision: ac3b23a1d65017e99af5231a8248590c278c136f

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-04T19:48:27
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-04-04 sponge
+    * Hopeful fixups to the infamous orpahned tunnel problem.
+    * BOB now 0.0.5
+
 2009-04-04 zzz
     * NTCP: Don't bid on messages too big to handle
 
